--- a/style.css
+++ b/style.css
@@ -24,3 +24,24 @@ body {
 
     }
 
+    #area-jogador-1 {
+        width: 200px;
+        height: 100px;
+        background-color: white;
+        border: 4px solid burlywood;
+        border-radius: 4px;
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+          }
+      
+    #area-jogador-2 {
+        width: 200px;
+        height: 100px;
+        background-color: white;
+        border: 4px solid burlywood;
+        border-radius: 4px;
+        position: absolute;
+        top: 40px;
+         right: 40px;
+          }
