--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
     #area-jogador-1 {
         width: 200px;
-        height: 100px;
+        height: 120px;
         background-color: white;
         border: 4px solid burlywood;
         border-radius: 4px;
@@ -37,7 +37,7 @@ body {
       
     #area-jogador-2 {
         width: 200px;
-        height: 100px;
+        height: 120px;
         background-color: white;
         border: 4px solid burlywood;
         border-radius: 4px;
@@ -45,3 +45,11 @@ body {
         top: 40px;
          right: 40px;
           }
+
+#botao-1{
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 10px;
+}
